# G4Workshop_Calicut

./: Kalman.cpp  README.md  TrackingOutput.txt  hough.cpp  momentumRECO.cpp
CheatCodes/: G4Event.txt  G4Step.txt  G4Track.txt  InheritanceAbstractClass.cpp  InheritanceAndConstructor.cpp  Rectangle.cpp  cheatSheet.txt
DT/: CMakeLists.txt  DT.cpp
DT/include/: DT_DetectorConstruction.h  DT_EventAction.h  DT_ModularPhysicsList.h  DT_PrimaryGeneratorAction.h  DT_RunAction.h  DT_SensitiveDetector.h  DT_SensitiveDetector_Hit.h  DT_SteppingAction.h  DT_TrackingAction.h  DT_UserPhysicsList.h
DT/src/: .DT_DetectorConstruction.cpp.swp  DT_DetectorConstruction.cpp  DT_EventAction.cpp  DT_ModularPhysicsList.cpp  DT_PrimaryGeneratorAction.cpp  DT_RunAction.cpp  DT_SensitiveDetector.cpp  DT_SensitiveDetector_Hit.cpp  DT_SteppingAction.cpp  DT_TrackingAction.cpp  DT_UserPhysicsList.cpp
Event/: CMakeLists.txt  Event.cpp
Event/include/: Event_DetectorConstruction.h  Event_EventAction.h  Event_ModularPhysicsList.h  Event_PrimaryGeneratorAction.h  Event_RunAction.h  Event_SensitiveDetector.h  Event_SensitiveDetector_Hit.h  Event_SteppingAction.h  Event_TrackingAction.h  Event_UserPhysicsList.h
Event/src/: Event_DetectorConstruction.cpp  Event_EventAction.cpp  Event_ModularPhysicsList.cpp  Event_PrimaryGeneratorAction.cpp  Event_RunAction.cpp  Event_SensitiveDetector.cpp  Event_SensitiveDetector_Hit.cpp  Event_SteppingAction.cpp  Event_TrackingAction.cpp  Event_UserPhysicsList.cpp
ExpData/: BackgroundSubtracted.root  BackgroundSubtracted_Calibrated.root  BgSub.C  Calibrate.C  CalibrateBgSub.C  Spectrum.C  ba.org  ba.org.root  ba.org_calibrated.root  bg.org  bg.org.root  co.org  co.org.root  co.org_calibrated.root  cs.org  cs.org.root  cs.org_calibrated.root  energyCalib.C  energyCalib.root  fitResolution.C  responseFunc.root
MuonDecay/: CMakeLists.txt  MuonDecay.cpp  muon.mac  test.mac  vis.mac
MuonDecay/include/: MuonDecay_ActionInitialization.h  MuonDecay_DetectorConstruction.h  MuonDecay_EventAction.h  MuonDecay_ModularPhysicsList.h  MuonDecay_PrimaryGeneratorAction.h  MuonDecay_RunAction.h  MuonDecay_SensitiveDetector.h  MuonDecay_SensitiveDetector_Hit.h  MuonDecay_SteppingAction.h  MuonDecay_TrackingAction.h  MuonDecay_UserPhysicsList.h
NaI/: CMakeLists.txt  NaI.cpp  calib2.root  gamma.mac  vis.mac
NaI/include/: NaI_DetectorConstruction.h  NaI_EventAction.h  NaI_ModularPhysicsList.h  NaI_PrimaryGeneratorAction.h  NaI_RunAction.h  NaI_SensitiveDetector.h  NaI_SensitiveDetector_Hit.h  NaI_SteppingAction.h  NaI_TrackingAction.h  NaI_UserPhysicsList.h
NaI/rootFiles/: calib.root  calibE.root
NaI/src/: NaI_DetectorConstruction.cpp  NaI_EventAction.cpp  NaI_ModularPhysicsList.cpp  NaI_PrimaryGeneratorAction.cpp  NaI_RunAction.cpp  NaI_SensitiveDetector.cpp  NaI_SensitiveDetector_Hit.cpp  NaI_SteppingAction.cpp  NaI_TrackingAction.cpp  NaI_UserPhysicsList.cpp
PSD/: CMakeLists.txt  PSD.cpp  gamma.mac  neutron.mac
PSD/MacFiles/: run.mac
PSD/include/: EJ276D.h  PSD_Crystal_SD.h  PSD_DetectorConstruction.h  PSD_Digit.h  PSD_Digitizer.h  PSD_EventAction.h  PSD_Global.h  PSD_HitCollections.h  PSD_ModularPhysicsList.h  PSD_PMT_Hit.h  PSD_PMT_SD.h  PSD_PrimaryGeneratorAction.h  PSD_RunAction.h  PSD_SensitiveDetector.h  PSD_SensitiveDetector_Hit.h  PSD_SteppingAction.h  PSD_TrackInfo.h  PSD_TrackingAction.h  PSD_UserPhysicsList.h
PSD/macros/: ftree.C
PSD/src/: EJ276D.cpp  PSD_Crystal_SD.cpp  PSD_DetectorConstruction.cpp  PSD_Digit.cpp  PSD_Digitizer.cpp  PSD_EventAction.cpp  PSD_Global.cpp  PSD_ModularPhysicsList.cpp  PSD_PMT_Hit.cpp  PSD_PMT_SD.cpp  PSD_PrimaryGeneratorAction.cpp  PSD_RunAction.cpp  PSD_SensitiveDetector.cpp  PSD_SensitiveDetector_Hit.cpp  PSD_SteppingAction.cpp  PSD_TrackingAction.cpp  PSD_UserPhysicsList.cpp
PSD/test/: PlotPulse.cpp  PlotPulse2.cpp
Presentations/: AnalysisManager.pptx
PyScripts/: QWaveAnalysis.ipynb  Quantum.ipynb  WaveAnal.ipynb
ShellScripts/: README  create_digit_app.sh  create_digitizer_app.sh  create_geant_app.sh
Tracking/: CMakeLists.txt  Tracking.cpp  muon.mac
(+34 files in other folders)
